--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,17 @@ html, body {
     vertical-align: middle;
 }
 
+.landing-text h1 {
+    font-size: 500%;
+    font-weight: 700;
+}
+
+.subtle-link {
+    text-decoration: none;
+}
+
+footer {
+    width: 100%;
+    padding: 5% 5% 5% 5%
+}
+
